# pdf2md

./: .gitignore  README.md  pre-commit  pyproject.toml
.githooks/: pre-commit
pdf2md/: __init__.py  __main__.py  cli.py  converter.py
tests/: conftest.py  test_cli.py  test_converter.py
tests/fixtures/: README.md
